
Version 6.1 - not yet released
* user interface
  - "pan to" button in waypoint dialog
  - waypoint selection screen shows last used waypoints if no filter is set
  - change the info box geometry without restarting XCSoar
  - change the display orientation without restarting XCSoar
  - tabbed Task dialog with icons or text on tabs per settings
* route planning
  - new optional minimum-time route planning around airspace and terrain.  
    - allows avoidance or terrain, airspace or both
    - takes final glide and cruise-climb portions of flight into account
  - Configuration in Route Planner page of settings.  
    - Feature is by default disabled.
    - See settings help text for configuration options
  - Limitations of current version:
    - does not update the final glide bar, task times etc for any obstacle deviations
    - does not handle aircraft or destination location inside airspace
    - does not allow paths with course deviations greater than 90 degrees each leg.
    - some "jumping" of the solution may be experienced as altitude/location changes.
* reach (glide terrain footprint)
    - new engine for calculating the where the glider can fly in final glide,
      formerly known as the glide terrain footprint, now referred to as 'reach'.
    - this can calculate the reach around terrain obstacles
    - landable waypoints visible on the map are marked according to whether they are
      reachable
    - the reach calculation is configurable, turning search can be disabled if
      running on low-powered devices.
* map
  - north arrow is automatically hidden in north-up mode
  - added configurable slope shading (off/fixed/wind/sun)
  - autozoom uses stepless zooming and has configurable upper distance bound
  - "north up" map orientation now respects "glider position offset"
    by configuring a "shifting axis", i.e.
    - shifting based on bearing to target (i.e. North orientated "target up")
    - shifting based on avg of recently flown headings