@@ -1,33 +1,0 @@
-<?xml version="1.0"?>
-
-<Form Name="frmConfigInfoBoxes" Width="240" Height="320" Caption="InfoBoxes">
-  <Button Name="cmdClose" Caption="Close" X="5" Y="270" Width="60" Height="28" />
-
-  <Button Name="cmdCopy" Caption="Copy" X="75" Y="240" Width="60" Height="28" />
-  <Button Name="cmdPaste" Caption="Paste" X="140" Y="240" Width="60" Height="28" />
-
-  <Edit Name="prpInfoBox0" Caption="1" X="2" Y="0" Width="-2" Height="22" CaptionWidth="20" OnHelp="OnInfoBoxHelp">
-    <DataField DataType="enum"/>
-  </Edit>
-  <Edit Name="prpInfoBox1" Caption="2" X="2" Width="-2" Height="22" CaptionWidth="20" OnHelp="OnInfoBoxHelp">
-    <DataField DataType="enum"/>
-  </Edit>
-  <Edit Name="prpInfoBox2" Caption="3" X="2" Width="-2" Height="22" CaptionWidth="20" OnHelp="OnInfoBoxHelp">
-    <DataField DataType="enum"/>
-  </Edit>
-  <Edit Name="prpInfoBox3" Caption="4" X="2" Width="-2" Height="22" CaptionWidth="20" OnHelp="OnInfoBoxHelp">
-    <DataField DataType="enum"/>
-  </Edit>
-  <Edit Name="prpInfoBox4" Caption="5" X="2" Width="-2" Height="22" CaptionWidth="20" OnHelp="OnInfoBoxHelp">
-    <DataField DataType="enum"/>
-  </Edit>
-  <Edit Name="prpInfoBox5" Caption="6" X="2" Width="-2" Height="22" CaptionWidth="20" OnHelp="OnInfoBoxHelp">
-    <DataField DataType="enum"/>
-  </Edit>
-  <Edit Name="prpInfoBox6" Caption="7" X="2" Width="-2" Height="22" CaptionWidth="20" OnHelp="OnInfoBoxHelp">
-    <DataField DataType="enum"/>
-  </Edit>
-  <Edit Name="prpInfoBox7" Caption="8" X="2" Width="-2" Height="22" CaptionWidth="20" OnHelp="OnInfoBoxHelp">
-    <DataField DataType="enum"/>
-  </Edit>
-</Form>
