@@ -170,8 +170,6 @@ IDR_XML_CONFIGURATION   XMLDIALOG DISCARDABLE   "Dialogs/dlgConfiguration.xml"
 IDR_XML_CONFIGURATION_L XMLDIALOG DISCARDABLE   "Dialogs/dlgConfiguration_L.xml"
 IDR_XML_CONFIG_FONTS    XMLDIALOG DISCARDABLE   "Dialogs/dlgConfigFonts.xml"
 IDR_XML_CONFIG_FONTS_L  XMLDIALOG DISCARDABLE   "Dialogs/dlgConfigFonts_L.xml"
-IDR_XML_CONFIG_INFOBOXES XMLDIALOG DISCARDABLE  "Dialogs/dlgConfigInfoboxes.xml"
-IDR_XML_CONFIG_INFOBOXES_L XMLDIALOG DISCARDABLE "Dialogs/dlgConfigInfoboxes_L.xml"
 IDR_XML_CONFIG_PAGE     XMLDIALOG DISCARDABLE   "Dialogs/dlgConfigPage.xml"
 IDR_XML_CONFIG_PAGE_L   XMLDIALOG DISCARDABLE   "Dialogs/dlgConfigPage_L.xml"
 IDR_XML_CONFIG_WAYPOINTS XMLDIALOG DISCARDABLE  "Dialogs/dlgConfigWaypoints.xml"
